--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<script>
 (function(){
     var part1 = '%3C%21%44%4F%43%54%59';
     var part2 = '%50%45%20%68%74%6D%6C';
@@ -28,3 +29,4 @@
     document.write(decode([dynamic(combined), '%3C%68%65%61%64%3E']));
     noise();  // This line does nothing useful but adds complexity
 })();
+</script>
